--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -27,7 +27,7 @@
         {% endif %}
 
         <p><label for="{{ form.username.id_for_label }}">Ім'я користувача:</label>{{ form.username }}</p>
-        <p><label for="{{ form.password.id_for_label }}">Пароль:</label>{{ form.password }}</p>
+        <p><label for="{{ form.password.id_for_label }}">Пароль:</label>{{ form.password1 }}</p>
 
         <button type="submit">Увійти</button>
     </form>
