--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -28,7 +28,7 @@
 
         <p><label for="{{ form.username.id_for_label }}">Ім'я користувача:</label>{{ form.username }}</p>
         <p><label for="{{ form.email.id_for_label }}">Електронна пошта:</label>{{ form.email }}</p>
-        <p><label for="{{ form.password.id_for_label }}">Пароль:</label>{{ form.password }}</p>
+        <p><label for="{{ form.password.id_for_label }}">Пароль:</label>{{ form.password1 }}</p>
         <p><label for="{{ form.password2.id_for_label }}">Підтвердження пароля:</label>{{ form.password2 }}</p>
 
         <button type="submit">Зареєструватися</button>
